tests/ui/typeck/immutable/double_specifier.sol
contract C {
    uint immutable immutable x; //~ ERROR: mutability already specified
}
